--- a/.github/workflows/webscrape.yaml
+++ b/.github/workflows/webscrape.yaml
@@ -21,7 +21,7 @@ jobs:
       - name: Pull latest changes
         run: git pull origin main  # replace 'main' if your default branch differs
 
-      - name: Run timestamp script
+      - name: Run webscrape script
         run: web_scraper.py
 
       - name: Configure Git
