--- a/.github/workflows/webscrape.yaml
+++ b/.github/workflows/webscrape.yaml
@@ -16,10 +16,16 @@ jobs:
       with:
         python-version: '3.x'
 
+      
+    - name: Install Google Chrome (deb package)
+      run: |
+        wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+        sudo apt-get update
+        sudo apt install -y ./google-chrome-stable_current_amd64.deb
+
     - name: Install Google Chrome and ChromeDriver
       run: |
         sudo apt-get update
-        sudo apt-get install -y google-chrome-stable
         sudo apt-get install -yqq chromium-chromedriver
         if [ ! -f /usr/bin/chromedriver ]; then
         sudo ln -s /usr/lib/chromium-browser/chromedriver /usr/bin/chromedriver
