--- a/.github/workflows/webscrape.yaml
+++ b/.github/workflows/webscrape.yaml
@@ -15,6 +15,14 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: '3.x'
+      
+    - name: Install headless Chrome dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y \
+          fonts-liberation libnss3 libxss1 libasound2 \
+          libx11-xcb1 libxcomposite1 libxcursor1 \
+          libxdamage1 libxi6 libxtst6 libxrandr2 xdg-utils
 
     - name: Install Google Chrome (no Snap)
       run: |
