--- a/.github/workflows/webscrape.yaml
+++ b/.github/workflows/webscrape.yaml
@@ -22,7 +22,8 @@ jobs:
         sudo apt-get install -y \
           fonts-liberation libnss3 libxss1 libasound2 \
           libx11-xcb1 libxcomposite1 libxcursor1 \
-          libxdamage1 libxi6 libxtst6 libxrandr2 xdg-utils
+          libxdamage1 libxi6 libxtst6 libxrandr2 xdg-utils \
+          libasound2t64
 
     - name: Install Google Chrome (no Snap)
       run: |
