--- a/.github/workflows/webscrape.yaml
+++ b/.github/workflows/webscrape.yaml
@@ -60,12 +60,10 @@ jobs:
           fear_greed_debug.png
           page_source.html
 
-    - name: Commit and push scraped data
+      -name: Commit and push data
       run: |
-        git config --global user.name 'github-actions[bot]'
-        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-        git add -A
-        git commit -m "Update scraped data [skip ci]" || echo "Nothing to commit"
-        git push
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add path/to/your/data.json
+          git commit -m "Update scraped data [skip ci]" || echo "No changes to commit"
+          git push
