--- a/.github/workflows/webscrape.yaml
+++ b/.github/workflows/webscrape.yaml
@@ -52,12 +52,17 @@ jobs:
     - name: Run scraper
       run: python web_scraper.py
 
-    - name: Upload fear & greed debug artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: fear_greed_debug
-        path: |
-          fear_greed_debug.png
-          page_source.html
+    - name: Commit and push updated JSON
+      run: |
+        git config --global user.name "github-actions[bot]"
+        git config --global user.email "github-actions[bot]@users.noreply.github.com"
 
-     
+        git add json_folder/feargreed.json
+        git commit -m "Update Fear & Greed data [bot]" || echo "No changes to commit"
+        git push
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+ 
+
+    
