--- a/.github/workflows/feargreed.yaml
+++ b/.github/workflows/feargreed.yaml
@@ -20,7 +20,7 @@ jobs:
       run: pip install requests
 
     - name: Run scraper
-      run: python feargreed_scraper.py
+      run: python scrape_fear_greed.py
 
     - name: Commit and push updated JSON
       run: |
