--- a/.github/workflows/feargreed.yaml
+++ b/.github/workflows/feargreed.yaml
@@ -2,9 +2,9 @@ name: Run Fear & Greed Scraper
 
 on:
   schedule:
-    - cron: '* * * * *'  # Every minute (Note: GitHub may delay runs to every 5 minutes)
-  workflow_dispatch:      # Still allows manual triggering
-
+    - cron: '0 */12 * * *'  # Every 12 hours at minute 0 (i.e., at 00:00 and 12:00 UTC)
+  workflow_dispatch:        # Allows manual triggering
+  
 jobs:
   run-scraper:
     runs-on: ubuntu-latest
