--- a/.github/workflows/sendsignal.yaml
+++ b/.github/workflows/sendsignal.yaml
@@ -16,8 +16,7 @@ jobs:
           python-version: '3.10'
 
       - name: Install dependencies
-        run: pip install -r requirements1.txt
-
+        run: pip install -r packages/requirements1.txt
       - name: Run stock trading signal script
         run: python auxillary/trading.py
         env:
